--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@filecoin-shipyard/lotus-client-provider-browser": "0.0.14",
+    "@filecoin-shipyard/lotus-client-provider-nodejs": "0.0.5",
+    "@filecoin-shipyard/lotus-client-rpc": "0.0.11",
+    "@filecoin-shipyard/lotus-client-schema": "0.0.10",
+    "@openworklabs/filecoin-number": "0.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ipfs-http-client": "^44.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
