--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ipfs-http-client": "^44.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
